# phonors

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/: cells.rs  common.rs  derivative_dynmat.rs  diagonalize.rs  dynmat.rs  fc2.rs  fc3.rs  fc4.rs  imag_self_energy.rs  lib.rs  pp_collision.rs  tetrahedron_method.rs  triplet.rs  triplet_grid.rs
