[package]
name = "phonors"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Rust kernels for phonopy and phono3py"
license = "BSD-3-Clause"
repository = "https://github.com/phonopy/phonors"
homepage = "https://github.com/phonopy/phonors"
readme = "README.md"
keywords = ["phonon", "phonopy", "phono3py", "lattice-dynamics"]
categories = ["science"]

[lib]
name = "phonors"
crate-type = ["cdylib", "rlib"]

[features]
default = ["extension-module"]
extension-module = ["pyo3/extension-module"]

[dependencies]
pyo3 = { version = "0.28", features = ["abi3-py310"] }
numpy = "0.28"
rayon = "1"

[lints.clippy]
# Numeric kernels favour explicit `for i in 0..n` loops with multi-dimensional
# indexing over iterator chains; readability outweighs the lint.
needless_range_loop = "allow"
# PyO3 / numpy bridge functions frequently exceed clippy's 7-argument heuristic.
too_many_arguments = "allow"
# Kernel return / scratch types are intentionally tuples of arrays.
type_complexity = "allow"

[profile.release]
lto = "thin"
codegen-units = 1

[profile.release-with-debug]
inherits = "release"
debug = true
