[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "phonors"
version = "0.1.0"
description = "Rust port of phono3py native kernels (development crate)."
requires-python = ">=3.10"

[tool.maturin]
manifest-path = "Cargo.toml"
module-name = "phonors"
features = ["pyo3/extension-module"]
